<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_book_name"
                android:textColor="@color/colorText"
                android:textSize="20dp" />

            <EditText
                android:textColor="#ffff"
                android:id="@+id/new_entry_book_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_author"
                android:textColor="@color/colorText"
                android:textSize="20dp" />

            <EditText
                android:textColor="#ffff"
                android:id="@+id/new_entry_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_book_description"
                android:textColor="@color/colorText"
                android:textSize="20dp" />

            <EditText
                android:textColor="#ffff"
                android:id="@+id/new_entry_book_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_genre"
                android:textColor="@color/colorText"
                android:textSize="20dp" />

            <RadioGroup
                android:id="@+id/new_entry_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:textColor="#ffff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/new_entry_genre_fantasy" />

                <RadioButton
                    android:textColor="#ffff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/new_entry_genre_adventure" />

                <RadioButton
                    android:textColor="#ffff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/new_entry_genre_detective" />

            </RadioGroup>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_pack"
                android:textColor="@color/colorText"
                android:textSize="20dp" />


            <CheckBox
                android:textColor="#ffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/new_entry_maintenance_only_book" />

            <CheckBox
                android:textColor="#ffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_audio_book" />

            <CheckBox
                android:textColor="#ffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_both_pack" />


            <CheckBox
                android:textColor="#ffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_special_pack" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_maintenance_payment_type"
                android:textColor="@color/colorText"
                android:textSize="20dp" />

            <Spinner
                android:textColor="#ffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/new_entry_book_payment_type" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:text="@string/new_entry_button" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>